--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.7)
-project(TrabajoPracticoTaller)
+project(TrabajoPracticoTaller) #aca pongan el nombre de su carpeta donde esta too
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
@@ -8,5 +8,5 @@ find_package(SDL2_image REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
 
-add_executable(MarvelVSCapcom WIN32 main.cpp)
-target_link_libraries(untitled ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+add_executable(app WIN32 main.cpp)
+target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
