--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-idea/
-
+.idea/
+cmake-build-debug/
 # Compiled source #
 ###################
 *.com
@@ -8,6 +8,8 @@ idea/
 *.exe
 *.o
 *.so
+*.png~
+
 
 # Packages #
 ############
