--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ find_package(SDL2_image REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
 
-add_executable(app main.cpp Clases/Game.cpp Clases/Game.h Clases/TextureManager.cpp Clases/TextureManager.h Clases/GameObject.cpp Clases/GameObject.h Clases/Character.cpp Clases/Character.h Clases/Background.cpp Clases/Background.h Clases/Controller.cpp Clases/Controller.h)
+add_executable(app main.cpp Clases/Game.cpp Clases/Game.h Clases/TextureManager.cpp Clases/TextureManager.h Clases/GameObject.cpp Clases/GameObject.h Clases/Character.cpp Clases/Character.h Clases/Background.cpp Clases/Background.h Clases/Controller.cpp Clases/Controller.h model/Game/ViewFactory/ViewFactory.cpp model/Game/ViewFactory/ViewFactory.h model/Game/GameObjectControllerFactory/GameObjectControllerFactory.cpp model/Game/GameObjectControllerFactory/GameObjectControllerFactory.h model/Game/GameObjectFactory/GameObjectFactory_fight.cpp model/Game/GameObjectFactory/GameObjectFactory_fight.h model/Game/GameObjectFactory/GameObjectFactory.cpp model/Game/GameObjectFactory/GameObjectFactory.h model/Game/GameObjectControllerFactory/GameObjectControllerFactory_fight.cpp model/Game/GameObjectControllerFactory/GameObjectControllerFactory_fight.h Views/view/View.cpp Views/view/View.h)
 target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
