--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,37 @@ include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
 add_executable(
         app main.cpp
         model/Game/Game.cpp model/Game/Game.h
-        model/GameObjects/GameObject/GameObject.cpp model/GameObjects/GameObject/GameObject.h
-        model/GameObjects/Characters/Character/Character.cpp model/GameObjects/Characters/Character/Character.h
-        model/GameObjects/Background/Background.cpp model/GameObjects/Background/Background.h
-        controllers/Controller/Controller.cpp controllers/Controller/Controller.h
-        controllers/ViewController/ViewController.cpp controllers/ViewController/ViewController.h
+        model/GameObjects/GameObject/GameObject.cpp
+        model/GameObjects/GameObject/GameObject.h
+        model/GameObjects/Characters/Character/Character.cpp
+        model/GameObjects/Characters/Character/Character.h
+        model/GameObjects/Background/Background.cpp
+        model/GameObjects/Background/Background.h
+        controllers/Controller/Controller.cpp
+        controllers/Controller/Controller.h
+        controllers/ViewController/ViewController.cpp
+        controllers/ViewController/ViewController.h
         views/View/View.cpp views/View/View.h
-        utils/TextureManager/TextureManager.cpp utils/TextureManager/TextureManager.h
-        model/Game/ViewControllerFactory/ViewControllerFactory.cpp model/Game/ViewControllerFactory/ViewControllerFactory.h model/Game/GameObjectControllerFactory/GameObjectControllerFactory.cpp model/Game/GameObjectControllerFactory/GameObjectControllerFactory.h model/Game/GameObjectFactory/GameObjectFactory.cpp model/Game/GameObjectFactory/GameObjectFactory.h
-        model/Viewmanager/ViewManager.cpp model/Viewmanager/ViewManager.h  model/Game/ViewControllerFactory/ViewControllerFactory.cpp model/Game/ViewControllerFactory/ViewControllerFactory.h model/Viewmanager/ViewManager.cpp model/Viewmanager/ViewManager.h utils/EventToValueMapper/EventToValueMapper.cpp utils/EventToValueMapper/EventToValueMapper.h)
+        utils/TextureManager/TextureManager.cpp
+        utils/TextureManager/TextureManager.h
+        model/Game/ViewControllerFactory/ViewControllerFactory.cpp
+        model/Game/ViewControllerFactory/ViewControllerFactory.h
+        model/Game/GameObjectControllerFactory/GameObjectControllerFactory.cpp
+        model/Game/GameObjectControllerFactory/GameObjectControllerFactory.h
+        model/Game/GameObjectFactory/GameObjectFactory.cpp
+        model/Game/GameObjectFactory/GameObjectFactory.h
+        model/Viewmanager/ViewManager.cpp
+        model/Viewmanager/ViewManager.h
+        model/Game/ViewControllerFactory/ViewControllerFactory.cpp
+        model/Game/ViewControllerFactory/ViewControllerFactory.h
+        model/Viewmanager/ViewManager.cpp
+        model/Viewmanager/ViewManager.h
+        utils/EventToValueMapper/EventToValueMapper.cpp
+        utils/EventToValueMapper/EventToValueMapper.h
+        controllers/Controller/ControllerCharacter/ControllerCharacter.cpp
+        controllers/Controller/ControllerCharacter/ControllerCharacter.h
+        controllers/Controller/ControllerBackground/ControllerBackground.cpp
+        controllers/Controller/ControllerBackground/ControllerBackground.h
+)
 target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 
