--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ add_executable(
         utils/EventToValueMapper/EventToValueMapper_player1.cpp
         utils/EventToValueMapper/EventToValueMapper_player1.h
         utils/EventToValueMapper/EventToValueMapper_player2.cpp
-        utils/EventToValueMapper/EventToValueMapper_player2.h utils/TeamManager/TeamManager.cpp utils/TeamManager/TeamManager.h)
+        utils/EventToValueMapper/EventToValueMapper_player2.h
+        utils/TeamManager/TeamManager.cpp utils/TeamManager/TeamManager.h)
 target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 
