Se dan vuelta los personajes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,8 +87,10 @@ add_executable(
         Animations/VenomWalkFowardAnimation.cpp
         utils/SpriteManagers/SpiderManSpriteManager/SpiderManSpriteManager.cpp
         utils/SpriteManagers/SpiderManSpriteManager/SpiderManSpriteManager.h
-        utils/Logger/Logger.cpp utils/Logger/Logger.h)
-        utils/SpriteManagers/VenomSpriteManager/VenomSpriteManager.cpp utils/SpriteManagers/VenomSpriteManager/VenomSpriteManager.h)
+        utils/Logger/Logger.cpp utils/Logger/Logger.h
+        utils/SpriteManagers/VenomSpriteManager/VenomSpriteManager.cpp
+        utils/SpriteManagers/VenomSpriteManager/VenomSpriteManager.h
+        controllers/Controller/BackgroundsCotroller/BackgroundsController.cpp controllers/Controller/BackgroundsCotroller/BackgroundsController.h utils/FlipManager/FlipManager.cpp utils/FlipManager/FlipManager.h)
  
 target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 
