--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7)
 project(taller-marvel-capcom) #DEJAR COMO ESTA. Si no funca ---> renombrar la carpeta donde está el repo de git a esto
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
-SET(CMAKE_CXX_FLAGS "-std=c++11")
+SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread -lstdc++ -lm -ldl")
 set(CMAKE_CXX_STANDARD_LIBRARIES -ljsoncpp)
 
 find_package(SDL2 REQUIRED)
@@ -120,12 +120,9 @@ add_executable(
         Animations/ChunLiEnteringAnimation.h
         Animations/ChunLiEnteringAnimation.cpp
         Animations/CaptainAmericaEnteringAnimation.h
-        Animations/CaptainAmericaEnteringAnimation.cpp
-
-
-)
+        Animations/CaptainAmericaEnteringAnimation.cpp)
 
 
 
-target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+target_link_libraries(app ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${CMAKE_DL_LIBS})
 
