asrnjkenjwk tu vieja

--- a/configs.json
+++ b/configs.json
@@ -25,7 +25,7 @@
 				"filepath":"Images/Backgrounds/Background1.png",
 				"zindex":1,
 				"width": 1500,
-				"height": 900
+				"heit": 900
 			}
 		}
 	],
