--- a/configs.json
+++ b/configs.json
@@ -74,7 +74,8 @@
 		 	"height":700
 		 },
 	"gameParameters": {
-		"charactersSpeed": 10
+		"charactersSpeed": 10,
+		"jumpSpeed":13
 		},
 
 	"Graphics": {
