Fixeado tema logger y tema json

--- a/configs.json
+++ b/configs.json
@@ -4,6 +4,7 @@
 	[
 		{"background":
 			{
+				"name" : "Floor",
 				"filepath":"Images/Backgrounds/Background3.png",
 				"zindex":3,
 				"width": 3000,
@@ -13,6 +14,7 @@
 
 		{"background":
 			{
+				"name": "Moon",
 				"filepath":"Images/Backgrounds/Background2.png",
 				"zindex":2,
 				"width": 2200,
@@ -22,6 +24,7 @@
 
 		{"background":
 			{
+				"name": "Galaxy",
 				"filepath":"Images/Backgrounds/Background1.png",
 				"zindex":1,
 				"width": 1900,
