--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7)
 project(taller-marvel-capcom) #DEJAR COMO ESTA. Si no funca ---> renombrar la carpeta donde está el repo de git a esto
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
-SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread -lstdc++ -lm -ldl")
+set(CMAKE_CXX_FLAGS "-std=c++11 -pthread -lstdc++ -lm -ldl")
 set(CMAKE_CXX_STANDARD_LIBRARIES -ljsoncpp)
 
 find_package(SDL2 REQUIRED)
@@ -10,6 +10,7 @@ find_package(SDL2_image REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
 include_directories(${JSON_INC_PATH})
+
 
 add_executable(
         app main.cpp
