--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,10 @@ add_executable(
         utils/TextureManager/TextureManager.h
         views/View/View.cpp
         views/View/View.h
-        Server/Server.cpp Server/Server.h Client/Client.cpp Client/Client.h utils/Mapper/Mapper.cpp utils/Mapper/Mapper.h
+        Server/Server.cpp Server/Server.h
+        Client/Client.cpp
+        Client/Client.h
+        utils/Mapper/Mapper.cpp utils/Mapper/Mapper.h
         views/View/View_charSelect.cpp
         views/View/View_charSelect.h
         views/View/View_fight.cpp
@@ -157,6 +160,7 @@ add_executable(
         Server/Game_server/Game_server.cpp
         model/Game/GameObjectServerFactory/GameObjectServerFactory.cpp
         model/Game/GameObjectServerFactory/GameObjectServerFactory.h
+
 
 )
 
