--- a/configs.json
+++ b/configs.json
@@ -33,44 +33,44 @@
 		}
 	],
 	"characters":
-		[
-			{"name":"CaptainAmerica",
-			 "filepath":"../Images/Characters/CaptainAmerica.png",
-			 "height":280,
-			 "width":200,
-			 "zindex":99,
-			 "spriteManagerName": "CaptainAmerica",
-			 "size": 2.5
-			},
-			{"name":"ChunLi",
-			 "filepath":"../Images/Characters/ChunLi.png",
-			 "height":220,
-			 "width":200,
-			 "zindex":99,
-			 "spriteManagerName": "ChunLi",
-			 "size": 2.5
-			},
-			{"name":"SpiderMan",
-			 "filepath":"../Images/Characters/SpiderMan.png",
-			 "height":245,
-			 "width":200,
-			 "zindex":98,
-			 "spriteManagerName": "SpiderMan",
-			 "size": 2.5
-			},
-			{"name":"Venom",
-			 "filepath":"../Images/Characters/Venom.png",
-			 "height":300,
-			 "width":200,
-			 "zindex":98,
-			 "spriteManagerName": "Venom",
-			 "size": 2.5
-			}
-		],
+	[
+		{"name":"CaptainAmerica",
+		 "filepath":"../Images/Characters/CaptainAmerica.png",
+		 "height":280,
+		 "width":200,
+		 "zindex":99,
+		 "spriteManagerName": "CaptainAmerica",
+		 "size": 2.5
+		},
+		{"name":"ChunLi",
+		 "filepath":"../Images/Characters/ChunLi.png",
+		 "height":220,
+		 "width":200,
+		 "zindex":99,
+		 "spriteManagerName": "ChunLi",
+		 "size": 2.5
+		},
+		{"name":"SpiderMan",
+		 "filepath":"../Images/Characters/SpiderMan.png",
+		 "height":245,
+		 "width":200,
+		 "zindex":98,
+		 "spriteManagerName": "SpiderMan",
+		 "size": 2.5
+		},
+		{"name":"Venom",
+		 "filepath":"../Images/Characters/Venom.png",
+		 "height":300,
+		 "width":200,
+		 "zindex":98,
+		 "spriteManagerName": "Venom",
+		 "size": 2.5
+		}
+	],
 	"window":
 		{
-			"width":1200,
-		 	"height":700
+		"width":1200,
+		"height":700
 		 },
 	"gameParameters": {
 		"charactersSpeed": 6,
@@ -83,7 +83,7 @@
 	"Title": {
 		"title": "Marvel vs Capcom"
 		},
-	"gameObjectCharSelect":
+	"caca":
 	[
 		{"name":"background",
 		"filepath":"../Images/menu_seleccion/Menu personajes.png",
